<resources>
    <string name="app_name">Medi-Follow</string>
    <string name="go_to_medicamentation_list">Go to medication list</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="medicaments_list">Medication List</string>
    <string name="newText">New</string>
    <string name="create_new_medicament">Create New Medication</string>
    <string name="name">Name</string>
    <string name="size_of_doses">Size of doses</string>
    <string name="waiting_time_before_new_stock_days">Waiting time before new stock (Days)</string>
    <string name="quantity_in_a_prescription">Quantity in a prescription</string>
    <string name="current_total_of_medication">Current total of medication</string>
    <string name="save">Save</string>
    <string name="delete_medication">Delete</string>
    <string name="modify">Modify</string>
    <string name="modify_medication">Modify Medication</string>
    <string name="alarm_list">Alarm List</string>
    <string name="go_to_alarm_list">go to alarm list</string>
    <string name="new_alarm">New Alarm</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="medication_to_take">Medication to take</string>
    <string name="void_text">void</string>
    <string name="_000">000</string>
    <string name="take_a_dose">Take a dose</string>
    <string name="quantity_to_take">Quantity to take: </string>
    <string name="quantity_left">Quantity left: </string>
</resources>